--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
             <div class="header-text">
                 <p><h2>PENETRATION TESTER <b>|</b> CYBER SECURITY ANALYST</h2></p>
-                <h1>Hi, I'm <span>MINHAJ</span><br>SHAMEER AHAMED</h1>
+                <h1><span>MINHAJ</span><br>SHAMEER AHAMED</h1>
                 <div class="social-links">
                     <a href="https://github.com/mhjshmr" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <a href="https://instagram.com/mhjshmr_?igshid=MjEwN2IyYWYwYw==" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
