--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="https://instagram.com/mhjshmr_?igshid=MjEwN2IyYWYwYw==" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/minhaj-shameer-student" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://wa.me/971555309355" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="Resume_Minhaj.Shameer.pdf" download class="btn btn3">Download CV </a>
+                    <a href="Resume_Minhaj.Shameer.pdf" download class="btn btn3">Download Resume </a>
                 </div>
                 
             </div>
